--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,58 @@
 body {
   font-family: sans-serif;
 }
+input {
+  border-radius: 16px;
+  border: none;
+  padding: 6px;
+  outline: none;
+}
+button {
+  border-radius: 16px;
+  border: none;
+  padding: 4px 16px;
+  background-color: aliceblue;
+}
+button:hover {
+  background-color: olive;
+  color: #fff;
+  cursor: pointer;
+}
+li {
+  margin-right: 8px;
+}
+.input-area {
+  background-color: lightblue;
+  width: 400px;
+  height: 30px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+}
+.imcomplete-area {
+  background-color: lightgreen;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+}
+.complete-area {
+  background-color: lightcoral;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+}
+.title {
+  text-align: center;
+  margin-top: 0;
+  font-weight: bold;
+  color: #666;
+}
+.list-row {
+  display: flex;
+  align-items: center;
+  padding-bottom: 4px;
+}
